footer fixed, cleaned up console.logs and spacing

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -19,3 +19,8 @@ form.login {
 #modalButton {
   width: 30%;
 }
+
+#modal1 {
+  height: 75%;
+  width: 75%;
+}
